# EchoProxy

./: .gitignore  Makefile  README.md  docker-compose.yml  go.work  go.work.sum
.github/workflows/: ci.yml  publish-sdks.yml  release.yml  sdk-laravel-mirror.yml
api/: event.proto
auth-api/: go.mod  go.sum
bench/: run-sdk-smoke.sh
cleanup/: go.mod  go.sum
dashboard/: Dockerfile  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
dashboard/components/: code-block.tsx  copy-button.tsx  log-detail-sheet.tsx  page-header.tsx  sidebar.tsx  status-badge.tsx  time-range.tsx
dashboard/lib/: auth.ts  utils.ts
deploy/: Dockerfile.go  prometheus.yml
docs/: architecture.md  inbound-vs-outbound.md  retention.md  runbook.md  sdk-publishing.md  sdk-spec.md
docs/deployment/: README.md  docker-compose.md  kubernetes.md
ingest-api/: go.mod  go.sum
log-consumer/: go.mod  go.sum
migrations/clickhouse/: 001_init.sql  002_direction.sql  003_upstream_latency.sql  004_minute_ttl.sql  005_raw_ttl_cap.sql  006_stream.sql
migrations/postgres/: 001_init.sql  002_redact_ratelimit_audit.sql  003_project_retention.sql
pkg/event/: event.pb.go  event_grpc.pb.go  go.mod  producer.go  schema.go
pkg/ratelimit/: go.mod  limiter.go  limiter_test.go
pkg/redact/: go.mod  redact.go  redact_test.go
proxy-gateway/: go.mod
proxy-gateway/bench/: README.md  k6-stress.js  k6.js  run-stress.sh  seed-key.sql
sdk-laravel/: .gitignore  README.md  composer.json  phpunit.xml
sdk-laravel/config/: echoproxy.php
sdk-laravel/examples/: capture_smoke.php  proxy_smoke.php
sdk-laravel/src/: Client.php  EchoproxyServiceProvider.php  ProxyClient.php
sdk-laravel/tests/: RedactorTest.php
sdk-python/: .gitignore  README.md  pyproject.toml
sdk-python/echoproxy/: __init__.py  asgi.py  client.py  httpx_hook.py  proxy.py  redact.py  wsgi.py
sdk-python/examples/: capture_smoke.py  proxy_smoke.py
sdk-python/tests/: test_redact.py
sdk-reference-go/: README.md  go.mod  go.sum  sdk.go  sdk_test.go
sdk-ts/: LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
stats-api/: go.mod  go.sum
(+155 files in other folders)
