[project]
name = "echoproxy-sdk"
version = "0.1.0"
description = "Python SDK for the EchoProxy HTTP observability platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
asgi = ["starlette>=0.30"]
django = ["django>=4.0"]
flask = ["flask>=2.0"]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["echoproxy*"]
