[project]
name = "echoproxy-sdk"
version = "0.1.0"
description = "Python SDK for the EchoProxy HTTP observability platform — capture inbound + outbound HTTP traffic"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "songhieu", email = "songhieu2516@gmail.com" }]
keywords = ["observability", "http", "proxy", "apm", "logging", "clickhouse", "kafka"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Framework :: Django",
  "Framework :: FastAPI",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
]
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
asgi = ["starlette>=0.30"]
django = ["django>=4.0"]
flask = ["flask>=2.0"]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/songhieu/EchoProxy"
Repository = "https://github.com/songhieu/EchoProxy"
Issues = "https://github.com/songhieu/EchoProxy/issues"
Documentation = "https://github.com/songhieu/EchoProxy#readme"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["echoproxy*"]
